--- a/src/webpack-sample/package.json
+++ b/src/webpack-sample/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^3.2.1",
     "lodash": "^4.17.15",
+    "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
