--- a/src/webpack-sample/package.json
+++ b/src/webpack-sample/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.2.1",
+    "file-loader": "^5.0.2",
     "lodash": "^4.17.15",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
