--- a/src/webpack-sample/package.json
+++ b/src/webpack-sample/package.json
@@ -8,7 +8,7 @@
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open",
     "server": "node server.js",
-    "build": "npx webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
